--- a/package.json
+++ b/package.json
@@ -12,8 +12,13 @@
     "test": "jest"
   },
   "dependencies": {
+    "@mantine/core": "^4.1.2",
+    "@mantine/hooks": "^4.1.2",
+    "axios": "^0.26.1",
     "react": "^18.0.0",
-    "react-dom": "^18.0.0"
+    "react-dom": "^18.0.0",
+    "react-icons": "^4.3.1",
+    "react-query": "^4.0.0-beta.1"
   },
   "devDependencies": {
     "@types/node": "^17.0.23",
