--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mantine/core": "^4.1.2",
     "@mantine/hooks": "^4.1.2",
     "axios": "^0.26.1",
+    "msw": "^0.39.2",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-icons": "^4.3.1",
@@ -39,5 +40,8 @@
     "prettier": "^2.6.2",
     "typescript": "^4.6.3",
     "vite": "^2.9.1"
+  },
+  "msw": {
+    "workerDirectory": "public"
   }
 }
