--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,6 +20,6 @@
       "@/*": ["src/*"]
     }
   },
-  "include": ["src", ".eslintrc.js", "vite.config.ts"],
+  "include": ["src", ".eslintrc.js", "vite.config.ts", "public/*.js"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
