--- a/package.json
+++ b/package.json
@@ -15,16 +15,20 @@
     "@mantine/core": "^4.1.2",
     "@mantine/hooks": "^4.1.2",
     "axios": "^0.26.1",
+    "i18next": "^21.6.15",
+    "i18next-browser-languagedetector": "^6.1.4",
+    "i18next-http-backend": "^1.4.0",
     "msw": "^0.39.2",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-i18next": "^11.16.5",
     "react-icons": "^4.3.1",
     "react-query": "^4.0.0-beta.1"
   },
   "devDependencies": {
     "@types/node": "^17.0.23",
-    "@types/react": "^17.0.43",
-    "@types/react-dom": "^17.0.14",
+    "@types/react": "^18.0.0",
+    "@types/react-dom": "^18.0.0",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
     "@vitejs/plugin-react": "^1.3.0",
