Add basic tests for API and utils

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -48,8 +48,19 @@ jobs:
       - run: npm ci
       - run: npx stylelint --report-needless-disables
 
+  test:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - uses: actions/setup-node@v2
+        with:
+          node-version: 16
+      - run: npm ci
+      - run: npm run test
+
+
   build:
-    needs: [stylelint, tsc, prettier, eslint]
+    needs: [stylelint, tsc, prettier, eslint, test]
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
