--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "preview": "vite preview",
     "stylelint": "stylelint --report-needless-disables",
     "eslint": "eslint .",
-    "test": "jest"
+    "test": "vitest"
   },
   "dependencies": {
     "@mantine/core": "^4.1.2",
@@ -43,7 +43,8 @@
     "eslint-plugin-react-hooks": "^4.4.0",
     "prettier": "^2.6.2",
     "typescript": "^4.6.3",
-    "vite": "^2.9.1"
+    "vite": "^2.9.1",
+    "vitest": "^0.9.3"
   },
   "msw": {
     "workerDirectory": "public"
