--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "prettier": "prettier --check",
+    "prettier": "prettier --check .",
     "preview": "vite preview",
     "stylelint": "stylelint --report-needless-disables **/*.css",
     "eslint": "eslint .",
@@ -42,6 +42,7 @@
     "eslint-plugin-react": "^7.29.4",
     "eslint-plugin-react-hooks": "^4.4.0",
     "prettier": "^2.6.2",
+    "stylelint-config-standard": "^25.0.0",
     "typescript": "^4.6.3",
     "vite": "^2.9.1",
     "vitest": "^0.9.3"
