--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "react-query": "^4.0.0-beta.1"
   },
   "devDependencies": {
+    "@testing-library/react": "^13.1.1",
+    "@testing-library/user-event": "^14.1.1",
     "@types/node": "^17.0.23",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
@@ -41,6 +43,7 @@
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.29.4",
     "eslint-plugin-react-hooks": "^4.4.0",
+    "jsdom": "^19.0.0",
     "prettier": "^2.6.2",
     "stylelint-config-prettier": "^9.0.3",
     "stylelint-config-standard": "^25.0.0",
